# mind_simulation

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
mind_simulation/: __init__.py  config.py  debate.py  display.py  llm.py  mind.py  tracing.py  utils.py
mind_simulation/agents/: judge_agent.py  sub_personality_agent.py
mind_simulation/models/: debate_state.py  judge_verdict.py  personality_position.py
mind_simulation/prompts/: judge.md  sub_personality.md
mind_simulation/prompts/schemas/: debate.md  direct.md  final.md
mind_simulation/prompts/sub_personalities/: child.md  critic.md  self.md
web/: app.py  run.py
web/static/: app.js  style.css
web/templates/: app.html  landing.html
