[project]
name = "mind-simulation"
version = "0.1.0"
description = "LangChain multi-agent simulation of an inner psychological parliament."
requires-python = ">=3.14"
dependencies = [
    "langchain==1.3.1",
    "langchain-core==1.4.0",
    "langchain-groq==1.1.2",
    "langgraph>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langfuse>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
mind-simulation = "mind_simulation.mind:main"

[tool.pyright]
venvPath = "."
venv = "venv"
pythonVersion = "3.14"
