[project]
name = "mind-simulation"
version = "0.1.0"
description = "LangChain multi-agent simulation of an inner psychological parliament."
requires-python = ">=3.14"
dependencies = [
    "langchain==1.3.1",
    "langchain-core==1.4.0",
    "langchain-groq==1.1.2",
    "langchain-ollama>=0.2",
    "langgraph>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langfuse>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
mind-simulation = "mind_simulation.mind:main"
mind-web = "web.run:main"

[tool.setuptools.packages.find]
include = ["mind_simulation*", "web*"]

[tool.setuptools.package-data]
web = ["static/*", "templates/*"]

[tool.pyright]
venvPath = "."
venv = "venv"
pythonVersion = "3.14"
